--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,7 @@
         "unordered_map": "cpp",
         "utility": "cpp",
         "vector": "cpp",
-        "__memory": "cpp"
+        "__memory": "cpp",
+        "list": "cpp"
     }
 }
