--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,8 @@
         "utility": "cpp",
         "vector": "cpp",
         "__memory": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "variant": "cpp",
+        "iomanip": "cpp"
     }
 }
