Finally got the Nodes to work
Finally got the nodes to work, no parsing yet

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,5 +65,6 @@
         "list": "cpp",
         "variant": "cpp",
         "iomanip": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Enabled"
 }
